adding rolling machine and other finishing touches
really getting the id filtering dialed in

--- a/docs/blocks/machines/assembling_machine.mdx
+++ b/docs/blocks/machines/assembling_machine.mdx
@@ -362,7 +362,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   "id": "eye_armor_trim_smithing_template",
   "input": [
     {
-      "id": "minecraft:end_stone_brick",
+      "id": "minecraft:end_stone_bricks",
       "qty": 2
     },
     {
@@ -770,7 +770,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   "id": "rib_armor_trim_smithing_template",
   "input": [
     {
-      "id": "minecraft:nether_brick",
+      "id": "minecraft:nether_bricks",
       "qty": 2
     },
     {
@@ -938,7 +938,7 @@ The **Assembling Machine** is used to assemble components out of ingredients.
   "id": "tide_armor_trim_smithing_template",
   "input": [
     {
-      "id": "minecraft:prismarine_brick",
+      "id": "minecraft:prismarine_bricks",
       "qty": 2
     },
     {
