--- a/docs/blocks/machines/chemical_reactor.mdx
+++ b/docs/blocks/machines/chemical_reactor.mdx
@@ -10,7 +10,11 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 
 <CraftingTable recipe="input techreborn:invar_plate techreborn:extractor techreborn:invar_plate input techreborn:advanced_circuit techreborn:compressor techreborn:advanced_circuit input techreborn:invar_plate techreborn:extractor techreborn:invar_plate output techreborn:chemical_reactor" />
 
-## List of Chemical Reactions
+## Crafting Highlights
+
+There are a significant number of recipes this machine can make, but below is a list of the most useful ones. You can find the full un-abridged list of recipes below in "Recipes using Chemical Reactor"
+<details>
+	<summary>Crafting Highlights</summary>
 
 | Inputs                                                                                                | Time        | Output                                                   |
 | ----------------------------------------------------------------------------------------------------- | ----------- | -------------------------------------------------------- |
@@ -35,6 +39,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 | <McItem slug="techreborn:sulfur_cell"  /> + <McItem slug="techreborn:water_cell"  />                  | 60 Seconds  | 3x <McItem slug="techreborn:sulfuric_acid_cell"  />      |
 | 32x <McItem slug="minecraft:redstone_dust"  /> + <McItem slug="minecraft:diamond"  />                 | 60 Seconds  | <McItem slug="techreborn:synthetic_redstone_crystal"  /> |
 | <McItem slug="techreborn:compressed_air_cell"  /> + <McItem slug="techreborn:hydrogen_cell"  />       | 20 Seconds  | <McItem slug="techreborn:water_cell"  />                 |
+</details>
 
 **Chemical Reactor** can dye glass, terracota, candles, wool and carpets and also can transform crimson items and blocks into warped.
 
@@ -195,7 +200,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:black_stained_glass" /></summary>
 				<Machine config={{
   "id": "black_stained_glass_from_glass_with_black_dye",
   "input": [
@@ -204,13 +209,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:black_stained_glas",
+      "id": "minecraft:black_stained_glass",
       "qty": 12
     }
   ],
@@ -228,13 +233,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:black_stained_glas",
+      "id": "minecraft:black_stained_glass",
       "qty": 12
     }
   ],
@@ -768,7 +773,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:blue_stained_glass" /></summary>
 				<Machine config={{
   "id": "blue_stained_glass_from_cyan_stained_glass_with_blue_dye",
   "input": [
@@ -777,13 +782,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
@@ -801,13 +806,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
@@ -825,13 +830,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
@@ -849,13 +854,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
@@ -873,13 +878,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
@@ -1725,7 +1730,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:brown_stained_glass" /></summary>
 				<Machine config={{
   "id": "brown_stained_glass_from_black_stained_glass_with_orange_dye",
   "input": [
@@ -1734,13 +1739,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glas",
+      "id": "minecraft:black_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -1758,13 +1763,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -1782,13 +1787,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -1806,13 +1811,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -1830,13 +1835,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -1854,13 +1859,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:brown_stained_glas",
+      "id": "minecraft:brown_stained_glass",
       "qty": 12
     }
   ],
@@ -2634,7 +2639,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:cyan_stained_glass" /></summary>
 				<Machine config={{
   "id": "cyan_stained_glass_from_blue_stained_glass_with_green_dye",
   "input": [
@@ -2643,13 +2648,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
@@ -2667,13 +2672,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
@@ -2691,13 +2696,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
@@ -2715,13 +2720,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
@@ -3133,7 +3138,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 3
     },
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 2
     }
   ],
@@ -3591,7 +3596,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:gray_stained_glass" /></summary>
 				<Machine config={{
   "id": "gray_stained_glass_from_black_stained_glass_with_light_gray_dye",
   "input": [
@@ -3600,13 +3605,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glas",
+      "id": "minecraft:black_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -3624,13 +3629,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:black_stained_glas",
+      "id": "minecraft:black_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -3648,13 +3653,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -3672,13 +3677,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -3696,13 +3701,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -3720,13 +3725,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
@@ -4572,7 +4577,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:green_stained_glass" /></summary>
 				<Machine config={{
   "id": "green_stained_glass_from_blue_stained_glass_with_yellow_dye",
   "input": [
@@ -4581,13 +4586,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -4605,13 +4610,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -4629,13 +4634,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -4653,13 +4658,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -4677,13 +4682,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -4701,13 +4706,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glas",
+      "id": "minecraft:yellow_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
@@ -5673,7 +5678,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:light_blue_stained_glass" /></summary>
 				<Machine config={{
   "id": "light_blue_stained_glass_from_blue_stained_glass_with_light_gray_dye",
   "input": [
@@ -5682,13 +5687,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5706,13 +5711,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5730,13 +5735,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5754,13 +5759,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5778,13 +5783,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5802,13 +5807,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5826,13 +5831,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -5850,13 +5855,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
@@ -6552,7 +6557,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   }
 }} />
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:light_gray_stained_glass" /></summary>
 				<Machine config={{
   "id": "light_gray_stained_glass_from_glass_with_light_gray_dye",
   "input": [
@@ -6561,13 +6566,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
@@ -6585,13 +6590,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
@@ -6609,13 +6614,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
@@ -6633,13 +6638,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
@@ -7290,7 +7295,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:lime_stained_glass" /></summary>
 				<Machine config={{
   "id": "lime_stained_glass_from_cyan_stained_glass_with_yellow_dye",
   "input": [
@@ -7299,13 +7304,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:cyan_stained_glas",
+      "id": "minecraft:cyan_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7323,13 +7328,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7347,13 +7352,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:green_stained_glas",
+      "id": "minecraft:green_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7371,13 +7376,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_blue_stained_glas",
+      "id": "minecraft:light_blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7395,13 +7400,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7419,13 +7424,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glas",
+      "id": "minecraft:yellow_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -7443,13 +7448,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glas",
+      "id": "minecraft:yellow_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:lime_stained_glas",
+      "id": "minecraft:lime_stained_glass",
       "qty": 12
     }
   ],
@@ -8295,7 +8300,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:magenta_stained_glass" /></summary>
 				<Machine config={{
   "id": "magenta_stained_glass_from_glass_with_magenta_dye",
   "input": [
@@ -8304,13 +8309,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
@@ -8328,13 +8333,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:gray_stained_glas",
+      "id": "minecraft:gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
@@ -8352,13 +8357,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
@@ -8376,13 +8381,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
@@ -8400,13 +8405,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
@@ -9180,7 +9185,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:orange_stained_glass" /></summary>
 				<Machine config={{
   "id": "orange_stained_glass_from_glass_with_orange_dye",
   "input": [
@@ -9189,13 +9194,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
@@ -9213,13 +9218,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
@@ -9237,13 +9242,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:yellow_stained_glas",
+      "id": "minecraft:yellow_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
@@ -9801,7 +9806,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:pink_stained_glass" /></summary>
 				<Machine config={{
   "id": "pink_stained_glass_from_glass_with_pink_dye",
   "input": [
@@ -9810,13 +9815,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9834,13 +9839,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:light_gray_stained_glas",
+      "id": "minecraft:light_gray_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9858,13 +9863,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9882,13 +9887,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9906,13 +9911,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9930,13 +9935,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -9954,13 +9959,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
@@ -10854,7 +10859,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:purple_stained_glass" /></summary>
 				<Machine config={{
   "id": "purple_stained_glass_from_blue_stained_glass_with_magenta_dye",
   "input": [
@@ -10863,13 +10868,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -10887,13 +10892,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:blue_stained_glas",
+      "id": "minecraft:blue_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -10911,13 +10916,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -10935,13 +10940,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -10959,13 +10964,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -10983,13 +10988,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:purple_stained_glas",
+      "id": "minecraft:purple_stained_glass",
       "qty": 12
     }
   ],
@@ -11739,7 +11744,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:red_stained_glass" /></summary>
 				<Machine config={{
   "id": "red_stained_glass_from_glass_with_red_dye",
   "input": [
@@ -11748,13 +11753,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
@@ -11772,13 +11777,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:magenta_stained_glas",
+      "id": "minecraft:magenta_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
@@ -11796,13 +11801,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:orange_stained_glas",
+      "id": "minecraft:orange_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
@@ -11820,13 +11825,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:pink_stained_glas",
+      "id": "minecraft:pink_stained_glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:red_stained_glas",
+      "id": "minecraft:red_stained_glass",
       "qty": 12
     }
   ],
@@ -12186,7 +12191,7 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
   "id": "sea_lantern",
   "input": [
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 6
     },
     {
@@ -12841,13 +12846,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:white_stained_glas",
+      "id": "minecraft:white_stained_glass",
       "qty": 12
     }
   ],
@@ -13009,13 +13014,13 @@ The **Chemical Reactor** is used to combine two <McItem slug="techreborn:lava_ce
       "qty": 1
     },
     {
-      "id": "minecraft:glas",
+      "id": "minecraft:glass",
       "qty": 12
     }
   ],
   "output": [
     {
-      "id": "minecraft:yellow_stained_glas",
+      "id": "minecraft:yellow_stained_glass",
       "qty": 12
     }
   ],
