--- a/docs/blocks/machines/compressor.mdx
+++ b/docs/blocks/machines/compressor.mdx
@@ -1036,7 +1036,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_brick",
+      "id": "minecraft:prismarine_bricks",
       "qty": 1
     }
   ],
@@ -1050,7 +1050,7 @@ Main usage of **Compressor** is to make plates and compressed plant balls.
   "id": "prismarine_shard",
   "input": [
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 1
     }
   ],
