--- a/docs/blocks/machines/extractor.mdx
+++ b/docs/blocks/machines/extractor.mdx
@@ -1991,7 +1991,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   }
 }} />
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:wheat_seeds" /></summary>
 				<Machine config={{
   "id": "wheat_seeds_from_fern",
   "input": [
@@ -2002,7 +2002,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   ],
   "output": [
     {
-      "id": "minecraft:wheat_seed",
+      "id": "minecraft:wheat_seeds",
       "qty": 1
     }
   ],
@@ -2022,7 +2022,7 @@ The extractor can also be used to discard the contents of a <McItem slug="techre
   ],
   "output": [
     {
-      "id": "minecraft:wheat_seed",
+      "id": "minecraft:wheat_seeds",
       "qty": 1
     }
   ],
