--- a/docs/blocks/machines/grinder.mdx
+++ b/docs/blocks/machines/grinder.mdx
@@ -1573,7 +1573,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
 }} />
 				</details>
 <details>
-				<summary><McItem slug="minecraft:missing_asset" /></summary>
+				<summary><McItem slug="minecraft:prismarine_crystals" /></summary>
 				<Machine config={{
   "id": "prismarine_crystals",
   "input": [
@@ -1584,7 +1584,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 2
     }
   ],
@@ -1604,7 +1604,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 4
     }
   ],
@@ -1621,7 +1621,7 @@ Mining Ore Blocks instead of Raw Ores will also allow you to triple ingot produc
   "id": "prismarine_shard",
   "input": [
     {
-      "id": "minecraft:prismarine_brick",
+      "id": "minecraft:prismarine_bricks",
       "qty": 1
     }
   ],
