--- a/docs/blocks/machines/industrial_grinder.mdx
+++ b/docs/blocks/machines/industrial_grinder.mdx
@@ -1080,7 +1080,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "endstone_dust_from_end_stone_bricks_with_water",
   "input": [
     {
-      "id": "minecraft:end_stone_brick",
+      "id": "minecraft:end_stone_bricks",
       "qty": 1
     }
   ],
@@ -2080,7 +2080,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   ],
   "output": [
     {
-      "id": "minecraft:prismarine_crystal",
+      "id": "minecraft:prismarine_crystals",
       "qty": 3
     },
     {
