--- a/docs/blocks/machines/rolling_machine.mdx
+++ b/docs/blocks/machines/rolling_machine.mdx
@@ -16,22 +16,605 @@ The **Rolling Machine** is used to produce various coils, and vanilla items such
 
 <CraftingTable recipe="input minecraft:piston techreborn:advanced_circuit minecraft:piston input techreborn:compressor techreborn:machine_block techreborn:compressor input minecraft:piston techreborn:advanced_circuit minecraft:piston output techreborn:rolling_machine" />
 
-### Usage
 
-**Rolling Machine** has the following recipes:  
-<CraftingTable recipe="input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot input techreborn:copper_ingot air techreborn:copper_ingot input techreborn:nickel_ingot techreborn:copper_ingot techreborn:nickel_ingot output techreborn:cupronickel_heating_coil,3 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input air techreborn:nickel_ingot air input techreborn:nickel_ingot techreborn:chrome_ingot techreborn:nickel_ingot input air techreborn:nickel_ingot air output techreborn:nichrome_heating_coil,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input techreborn:refined_iron_ingot techreborn:refined_iron_ingot techreborn:refined_iron_ingot input techreborn:chrome_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:chrome_ingot techreborn:chrome_ingot techreborn:aluminum_ingot output techreborn:kanthal_heating_coil,3 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot input techreborn:magnesium_dust techreborn:magnesium_dust techreborn:magnesium_dust input techreborn:aluminum_ingot techreborn:aluminum_ingot techreborn:aluminum_ingot output techreborn:magnalium_plate,3 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:stick minecraft:iron_ingot input minecraft:iron_ingot air minecraft:iron_ingot output minecraft:rail,24 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:gold_ingot air minecraft:gold_ingot input minecraft:gold_ingot minecraft:stick minecraft:gold_ingot input minecraft:gold_ingot minecraft:redstone minecraft:gold_ingot output minecraft:golden_rail,8 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:stone_pressure_plate minecraft:iron_ingot input minecraft:iron_ingot minecraft:redstone minecraft:iron_ingot output minecraft:detector_rail,8 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot minecraft:stick minecraft:iron_ingot input minecraft:iron_ingot minecraft:redstone_torch minecraft:iron_ingot input minecraft:iron_ingot minecraft:stick minecraft:iron_ingot output minecraft:activator_rail,8 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot minecraft:iron_ingot minecraft:iron_ingot input minecraft:iron_ingot minecraft:iron_ingot minecraft:iron_ingot input air minecraft:iron_ingot air output minecraft:iron_bars,24 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot minecraft:iron_ingot air input minecraft:iron_ingot minecraft:iron_ingot air input minecraft:iron_ingot minecraft:iron_ingot air output minecraft:iron_door,4 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot minecraft:iron_ingot minecraft:iron_ingot input air air air output minecraft:minecart,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input minecraft:iron_ingot air minecraft:iron_ingot input minecraft:iron_ingot air minecraft:iron_ingot input air minecraft:iron_ingot air output minecraft:bucket,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input air minecraft:iron_ingot air input air minecraft:stick air input air minecraft:oak_planks air output minecraft:tripwire_hook,4 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input air air air input minecraft:iron_ingot minecraft:iron_ingot air input air air air output minecraft:heavy_pressure_plate,2 tool techreborn:rolling_machine" />
-<CraftingTable recipe="input air air air input minecraft:gold_ingot minecraft:gold_ingot air input air air air output minecraft:light_pressure_plate,2 tool techreborn:rolling_machine" />
+### Crafting Recipes
+		<details>
+			<summary>Recipes using Rolling Machine</summary>
+			<Machine config={{
+  "id": "activator_rail",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:stick",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:redstone_torch",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:stick",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:activator_rail",
+      "qty": 8
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "bucket",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:bucket",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "cupronickel_heating_coil",
+  "input": [
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:copper_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:cupronickel_heating_coil",
+      "qty": 3
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "detector_rail",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:stone_pressure_plate",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:redstone",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:detector_rail",
+      "qty": 8
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "heavy_weighted_pressure_plate",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:heavy_weighted_pressure_plate",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "iron_bars",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:iron_bars",
+      "qty": 24
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "iron_door",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:iron_door",
+      "qty": 4
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "light_weighted_pressure_plate",
+  "input": [
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:light_weighted_pressure_plate",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "magnalium_plate",
+  "input": [
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:magnesium_dust",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:magnesium_dust",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:magnesium_dust",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:aluminum_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:magnalium_plate",
+      "qty": 3
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "minecart",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:minecart",
+      "qty": 1
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "nichrome_heating_coil",
+  "input": [
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:chrome_ingot",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "techreborn:nickel_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "techreborn:nichrome_heating_coil",
+      "qty": 2
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "powered_rail",
+  "input": [
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:stick",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:redstone",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:gold_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:powered_rail",
+      "qty": 8
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
+<Machine config={{
+  "id": "rail",
+  "input": [
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:stick",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:air",
+      "qty": 1
+    },
+    {
+      "id": "minecraft:iron_ingot",
+      "qty": 1
+    }
+  ],
+  "output": [
+    {
+      "id": "minecraft:rail",
+      "qty": 24
+    }
+  ],
+  "tool": "techreborn:rolling_machine",
+  "meta": {
+    "power": 5,
+    "time": 250
+  }
+}} />
 
+		</details>
