--- a/docs/items/armor/armor.mdx
+++ b/docs/items/armor/armor.mdx
@@ -18,22 +18,19 @@ import ArmorPartial from './_armor_intro.mdx';
 
 ## Armor sets
 
-```
-Material                                                                                                                                  Full set defense   Full set armor toughness   Knockback Resistance   Enchantability
-  -------------------------------------------------------------------- ------------------ -------------------------- ---------------------- ----------------
-  ![Leather (vanilla)](/mods/minecraft/leather_chestplate.png){width="24" query="?nolink&24"}Leather (vanilla)                              7                  \-                         \-                     15
-  ![Chainmail (vanilla)](/mods/minecraft/chainmail_chestplate.png){width="24" query="?nolink&24"}Chainmail (vanilla)                        12                 \-                         \-                     12
-  ![Iron (vanilla)](/mods/minecraft/iron_chestplate.png){width="24" query="?nolink&24"}Iron (vanilla)                                       15                 \-                         \-                     9
-  ![Gold (vanilla)](/mods/minecraft/golden_chestplate.png){width="24" query="?nolink&24"}Gold (vanilla)                                     11                 \-                         \-                     25
-  ![Diamond (vanilla)](/mods/minecraft/diamond_chestplate.png){width="24" query="?nolink&24"}Diamond (vanilla)                              20                 8                          \-                     10
-  ![Netherite (vanilla)](/mods/minecraft/netherite_chestplate.png){width="24" query="?nolink&24"}Netherite (vanilla)                        20                 12                         4                      15
-  ![Bronze Armor](/media/mods/techreborn/bronze_chestplate.png){width="24" query="?nolink&24"}**[Bronze](/items/armor/bronze_armor)**             16                 \-                         4                      8
-  ![Ruby Armor](/media/mods/techreborn/ruby_chestplate.png){width="24" query="?nolink&24"}**[Ruby](/items/armor/ruby_armor)**                     16                 \-                         \-                     10
-  ![Sapphire Armor](/media/mods/techreborn/sapphire_chestplate.png){width="24" query="?nolink&24"}**[Sapphire](/items/armor/sapphire_armor)**     16                 \-                         \-                     8
-  ![Peridot Armor](/media/mods/techreborn/peridot_chestplate.png){width="24" query="?nolink&24"}**[Peridot](/items/armor/peridot_armor)**         16                 \-                         \-                     16
-  ![Silver Armor](/media/mods/techreborn/silver_chestplate.png){width="24" query="?nolink&24"}**[Silver](/items/armor/silver_armor)**             11                 \-                         \-                     15
-  ![Steel Armor](/media/mods/techreborn/steel_chestplate.png){width="24" query="?nolink&24"}**[Steel](/items/armor/steel_armor)**                 16                 7                          \-                     5
-  ![Nano Armor](/media/mods/techreborn/nano_chestplate.png){width="24" query="?nolink&24"}**[Nano Armor](/items/armor/nano_armor)**               30                 12                         4                      10
-  ![Quantum Armor](/media/mods/techreborn/quantum_chestplate.png){width="24" query="?nolink&24"}**[Quantum Armor](/items/armor/quantum_armor)**   30                 20                         10                     10
-
-  ```
+| Material                                      | Full set defense | Full set armor toughness | Knockback Resistance | Enchantability |
+|-----------------------------------------------|------------------|--------------------------|----------------------|----------------|
+| <McItem slug="minecraft:leather_tunic" />  | 7                | –                        | –                    | 15             |
+| <McItem slug="minecraft:chainmail_chestplate" />| 12               | –                        | –                    | 12             |
+| <McItem slug="minecraft:iron_chestplate" />     | 15               | –                        | –                    | 9              |
+| <McItem slug="minecraft:golden_chestplate" />   | 11               | –                        | –                    | 25             |
+| <McItem slug="minecraft:diamond_chestplate" />  | 20               | 8                        | –                    | 10             |
+| <McItem slug="minecraft:netherite_chestplate" />| 20               | 12                       | 4                    | 15             |
+| <McItem slug="techreborn:bronze_chestplate" />  | 16               | –                        | 4                    | 8              |
+| <McItem slug="techreborn:ruby_chestplate" />    | 16               | –                        | –                    | 10             |
+| <McItem slug="techreborn:sapphire_chestplate" />| 16               | –                        | –                    | 8              |
+| <McItem slug="techreborn:peridot_chestplate" /> | 16               | –                        | –                    | 16             |
+| <McItem slug="techreborn:silver_chestplate" />  | 11               | –                        | –                    | 15             |
+| <McItem slug="techreborn:steel_chestplate" />   | 16               | 7                        | –                    | 5              |
+| <McItem slug="techreborn:nano_chestplate" />    | 30               | 12                       | 4                    | 10             |
+| <McItem slug="techreborn:quantum_chestplate" /> | 30               | 20                       | 10                   | 10             |
