--- a/docs/world/ores/ores.mdx
+++ b/docs/world/ores/ores.mdx
@@ -11,28 +11,28 @@ Tech Reborn adds several ores in all three dimensions. You can see these ores ei
 
 | Ore                                                | Found on          |
 | -------------------------------------------------- | ----------------- |
-| \<mcitem\>techreborn:galena_ore\</mcitem\>         | Y Level -39 - +40 |
-| **[Iridium Ore](/world_generation/ore/iridium)**   | Y Level -64 - 0   |
-| **[Ruby Ore](/world_generation/ore/ruby)**         | Y Level 20 - 120  |
-| **[Sapphire Ore](/world_generation/ore/sapphire)** | Y Level 20 - 120  |
-| **[Bauxite Ore](/world_generation/ore/bauxite)**   | Y Level -64 - 20  |
-| **[Lead Ore](/world_generation/ore/lead)**         | Y Level -20 - 40  |
-| **[Silver Ore](/world_generation/ore/silver)**     | Y Level -24 - 60  |
-| **[Tin Ore](/world_generation/ore/tin)**           | Y Level 25 - 80   |
+| <McItem slug="techreborn:galena_ore"/>       | Y Level -39 - +40 |
+| <McItem slug="techreborn:iridium_ore"/>  | Y Level -64 - 0   |
+| <McItem slug="techreborn:ruby_ore"/>         | Y Level 20 - 120  |
+| <McItem slug="techreborn:sapphire_ore"/> | Y Level 20 - 120  |
+| <McItem slug="techreborn:bauxite_ore"/>   | Y Level -64 - 20  |
+| <McItem slug="techreborn:lead_ore"/>         | Y Level -20 - 40  |
+| <McItem slug="techreborn:silver_ore"/>     | Y Level -24 - 60  |
+| <McItem slug="techreborn:tin_ore"/>           | Y Level 25 - 80   |
 
 ## The Nether
 
 | Ore                                            | Found on        |
 | ---------------------------------------------- | --------------- |
-| \<mcitem\>techreborn:pyrite_ore\</mcitem\>     | Y Level 0 - 128 |
-| \<mcitem\>techreborn:cinnabar_ore\</mcitem\>   | Y Level 0 - 128 |
-| \<mcitem\>techreborn:sphalerite_ore\</mcitem\> | Y Level 0 - 128 |
+| <McItem slug="techreborn:pyrite_ore"/>     | Y Level 0 - 128 |
+| <McItem slug="techreborn:cinnabar_ore"/>   | Y Level 0 - 128 |
+| <McItem slug="techreborn:sphalerite_ore"/> | Y Level 0 - 128 |
 
 ## The End
 
 | Ore                                            | Found on        |
 | ---------------------------------------------- | --------------- |
-| \<mcitem\>techreborn:tungsten_ore\</mcitem\>   | Layers 10 - 250 |
-| \<mcitem\>techreborn:sheldonite_ore\</mcitem\> | Layers 10 - 250 |
-| \<mcitem\>techreborn:peridot_ore\</mcitem\>    | Layer 10 - 250  |
-| \<mcitem\>techreborn:sodalite_ore\</mcitem\>   | Layer 10 - 250  |
+| <McItem slug="techreborn:tungsten_ore"/>   | Layers 10 - 250 |
+| <McItem slug="techreborn:sheldonite_ore"/> | Layers 10 - 250 |
+| <McItem slug="techreborn:peridot_ore"/>    | Layer 10 - 250  |
+| <McItem slug="techreborn:sodalite_ore"/>   | Layer 10 - 250  |
